Remove basename, for aws deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://marshs2.github.io/reps",
+  "homepage": "http://marshs2.github.io/rocketlane",
   "name": "rocket-listing",
   "version": "0.1.0",
   "private": true,
